--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources>
   <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar">
     <item name="android:statusBarColor">@android:color/transparent</item>
-    <item name="android:navigationBarColor">?attr/colorSurfaceContainer</item>
+    <item name="android:navigationBarColor">@android:color/transparent</item>
     <item name="android:windowLightStatusBar">true</item>
   </style>  
 </resources>
